--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,11 @@
 {
   "root": true,
-  "extends": [
-    "eslint:recommended"
-  ],
+  "extends": ["eslint:recommended"],
   "env": {
     "es6": true,
     "node": true
   },
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
