--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
   "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2021,
-    "sourceType": "module"
+    "sourceType": "module",
+    // @babel/eslint-parser options
+    "requireConfigFile": false
   },
   "rules": {
     "no-warning-comments":   ["warn", { "terms": ["TODO", "FIXME"], "location": "start" }],
