--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.1.0",
+    "jsonschema": "^1.4.0",
+    "lowdb": "^2.1.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
