--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "bufferutil": "^4.0.3",
     "discord.js": "^13.1.0",
     "jsonschema": "^1.4.0",
     "lowdb": "^2.1.0",
+    "utf-8-validate": "^5.0.5",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
+    "winston-daily-rotate-file": "^4.5.5",
+    "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.0",
