--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "license": "GPL-3.0-only",
   "type": "module",
   "scripts": {
-    "bot": "node src/index.js"
+    "bot": "node src/index.js",
+    "start": "pm2 start src/index.js --name Kosmoceratidae",
+    "stop": "pm2 stop Kosmoceratidae"
   },
   "dependencies": {
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "bufferutil": "^4.0.3",
-    "discord.js": "^13.1.0",
+    "discord.js": "^13.6.0",
     "jsonschema": "^1.4.0",
     "lowdb": "^2.1.0",
     "utf-8-validate": "^5.0.5",
@@ -18,8 +20,8 @@
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.0",
-    "discord-api-types": "^0.22.0",
-    "eslint": "^7.32.0"
+    "@babel/eslint-parser": "^7.17.0",
+    "discord-api-types": "^0.30.0",
+    "eslint": "^8.12.0"
   }
 }
