--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "stop": "pm2 stop Kosmoceratidae"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.6.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "bufferutil": "^4.0.3",
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "latest",
+    "bufferutil": "^4.0.6",
     "discord.js": "^13.6.0",
     "jsonschema": "^1.4.0",
-    "lowdb": "^2.1.0",
-    "utf-8-validate": "^5.0.5",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5",
+    "lowdb": "^3.0.0",
+    "utf-8-validate": "^5.0.9",
+    "winston": "^3.7.2",
+    "winston-daily-rotate-file": "^4.6.1",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
-    "discord-api-types": "^0.30.0",
+    "discord-api-types": "^0.31.0",
     "eslint": "^8.12.0"
   }
 }
