--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bufferutil": "^4.0.6",
     "discord.js": "^13.6.0",
     "jsonschema": "^1.4.0",
+    "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
     "utf-8-validate": "^5.0.9",
     "winston": "^3.7.2",
