--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "license": "GPL-3.0-only",
   "type": "module",
   "scripts": {
-    "bot": "node src/index.js",
-    "start": "pm2 start src/index.js --name Kosmoceratidae",
-    "stop": "pm2 stop Kosmoceratidae"
+    "start": "node src/index.js",
+    "register_global": "node src/scripts/deploy_global_commands.js",
+    "reset_commands": "node src/scripts/reset_commands.js"
   },
   "dependencies": {
-    "@discordjs/builders": "^0.12.0",
     "@discordjs/rest": "latest",
     "bufferutil": "^4.0.6",
-    "discord.js": "^13.6.0",
-    "jsonschema": "^1.4.0",
+    "discord.js": "^14.2.0",
+    "jsonschema": "^1.4.1",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
     "utf-8-validate": "^5.0.9",
-    "winston": "^3.7.2",
-    "winston-daily-rotate-file": "^4.6.1",
+    "winston": "^3.8.1",
+    "winston-daily-rotate-file": "^4.7.1",
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
-    "discord-api-types": "^0.31.0",
+    "discord-api-types": "latest",
     "eslint": "^8.12.0"
   }
 }
